--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,2 +1,34 @@
-<h1>Searcher</h1>
+<div class="row jumbotron">
+  <div class="col-md-4"></div>
+  <div class="col-md-4">
+    <h1 class="text-center">Searcher</h1>
+    
+    <div class="col-md-offset-2">
+      <%= form_tag search_index_path, :method => 'get' do %>
+        <%= text_field_tag :title,  params[:title],  :class => "form-control", :placeholder => "Title" %>
+        <%= text_field_tag :weight, params[:weight], :class => "form-control", :placeholder => "Weight" %>
+        <%= text_field_tag :price,  params[:price],  :class => "form-control", :placeholder => "Price" %>
+        <%= submit_tag "Find", :class => "btn btn-default" %>
+      <% end %>
+    </div>
+  </div>
+  <div class="col-md-4"></div>
+</div>
 
+
+<div class="row">
+  <div class="center-block" style="width:600px;">
+    <% unless @books.blank? %>
+      <h3 class="text-center">Search results</h3>
+
+      <ul class="list-group">
+        <% @books.each do |book| %>
+          <li class="list-group-item">
+            "<%= book.title %>" by 
+            <%= book.author %>
+          </li>
+        <% end %>
+      </ul>
+    <% end %>
+  </div>
+</div>
