--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,18 +1,18 @@
 <div class="row jumbotron">
-  <div class="col-md-4"></div>
-  <div class="col-md-4">
+  <div class="col-md-3"></div>
+  <div class="col-md-6">
     <h1 class="text-center">Searcher</h1>
     
-    <div class="col-md-offset-2">
-      <%= form_tag home_index_path, :method => 'get' do %>
-        <%= text_field_tag :title,  params[:title],  :class => "form-control", :placeholder => "Title" %>
-        <%= text_field_tag :value,  params[:value],  :class => "form-control", :placeholder => "Weight (runtime)" %>
-        <%= text_field_tag :price,  params[:price],  :class => "form-control", :placeholder => "Price" %>
+    <div>
+      <%= form_tag home_index_path, :method => 'get', :class => "form-inline" do %>
+        <%= text_field_tag :title,  params[:title],  :class => "form-control", :size => "19", :placeholder => "Title" %>
+        <%= text_field_tag :value,  params[:value],  :class => "form-control", :size => "12", :placeholder => "Weight (runtime)" %>
+        <%= text_field_tag :price,  params[:price],  :class => "form-control", :size => "10", :placeholder => "Price" %>
         <%= submit_tag "Find", :class => "btn btn-default" %>
       <% end %>
     </div>
   </div>
-  <div class="col-md-4"></div>
+  <div class="col-md-3"></div>
 </div>
 
 
